wrap fixes

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -1,5 +1,6 @@
 .search-container {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
   margin: 1rem 0;
 }
