--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -90,6 +90,7 @@
 .weather-footer {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 
 .chart-header {
